# healthsync

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/language/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/language/app/: config.py  errors.py  main.py  schemas.py
apps/language/app/interpreter/: fake.py  openrouter.py  port.py  prompt.py
apps/language/tests/: conftest.py  test_interpret_route.py  test_openrouter_live.py  test_openrouter_unit.py  test_schemas.py
apps/scheduling/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/scheduling/prisma/: schema.prisma  seed.sql
apps/scheduling/src/: app.controller.ts  app.module.ts  configure-app.ts  main.ts
apps/scheduling/test/: app.e2e-spec.ts  jest-e2e.json  messages.e2e-spec.ts
apps/web/: .env.example  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css
docs/: BUILD-PLAN.md  PRD.md
docs/adr/: 0001-record-architecture-decisions.md  0002-hexagonal-architecture.md  0003-bounded-contexts.md  0004-plan-as-unit-of-change.md  0005-intent-extensibility.md  0006-distributed-architecture.md  0007-inter-service-communication.md  0008-frontend-framework.md  0009-monorepo-strategy.md  0010-nlu-mechanism.md  0011-persistence.md  0012-realtime-transport.md  0013-notification-lifecycle.md  0014-llm-provider.md  template.md
openspec/: config.yaml
openspec/changes/phase-0-walking-skeleton/: design.md
(+104 files in other folders)
